--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,110 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta name="viewport" />
+    <meta charset="utf-8" />
     <title>Caesar Cipher</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div id="root">
-      <h1>Hola mundo!</h1>
+      <div id="inicio" class="ventanas">
+        <h1>Mensajes para encubrir Contraseñas</h1>
+
+        <p>
+          Escribe en cada recuadro tus datos para acceder a la aplicación.
+        </p>
+        <div class="InstruccionesDatos">
+          <div id="datos">
+            <div class="AlineaDatos">
+              <label> Nombre y Apellido </label
+              ><input type="text" id="name" placeholder="Marcela Fredez" />
+              <p id="avisoName"></p>
+            </div>
+            <div class="AlineaDatos">
+              <label> Rut </label>
+              <input type="number" id="rut" placeholder="12.749.625-k" />
+              <p id="avisoRut"></p>
+            </div>
+            <div class="AlineaDatos">
+              <label> N° de Documento </label>
+              <input type="number" id="nDoc" placeholder="100000001" />
+              <p id="avisoNdeDoc"></p>
+            </div>
+          </div>
+          <div id="ejemplo">
+            <img alt="cedula" src="img/ejemplo.jpg" width="400px" />
+          </div>
+        </div>
+
+        <button id="ingresar">Ingrese</button>
+      </div>
+
+      <div id="cuenta" class="ventanas">
+        <button id="uso">Modo de Uso</button>
+        <button id="btnOutside">Salir</button>
+        <div>
+          <h2>Generar contraseñas:</h2>
+          <p>
+            1-.Para una <strong> clave Alfanumérica </strong>escribe una
+            <strong> Palabra </strong> y <strong> Presiona </strong>el
+            <strong> Boton Generar Contraseña</strong> <br />2- Si es
+            <strong>Numérica </strong> Solo <strong> Presiona el Botón</strong>
+          </p>
+          <label>Palabra</label><input type="text" id="palabraContraseña" />
+          <button id="disparaContraseña">Generar Contraseña</button>
+          <p id="contraseñaGenerada"></p>
+        </div>
+
+        <div>
+          <div>
+            <p id="Cod"><strong>Código de seguridad</strong></p>
+            <p>
+              "Escribe aquí los <strong>dos últimos</strong> digitos de tu
+              <strong>N° de Documento</strong>"
+            </p>
+            <input type="number" id="codSeg" placeholder="001" />
+          </div>
+          <p id="insMsj"><strong> Escribe</strong> en el recuadro debajo de Mensaje Descubierto <strong> para que es, la contraseña</strong>  que generaste y <strong> presiona</strong>  el botón <strong> cifrar </strong> . De modo que puedas pasarlo al papel y solo tu puedas recuperar el significado de la frase, escribiéndola debajo de Mensaje Cubierto y presionando Descifrar. </p>
+          <div class="msj">
+            
+            <div id="Cubierto">
+              <p>Mensaje Cubierto</p>
+
+              <textarea
+                id="textoCifrado"
+                class="cajas"
+                placeholder="Escriba aquí el TEXTO que desea DESCIFRAR"
+              ></textarea>
+
+              <button id="descifrar">Descifrar</button>
+
+              <p id="respDescifrada"></p>
+            </div>
+            <div id="Descubierto">
+              <p>Mensaje Descubierto</p>
+              <textarea
+                id="textoDescifrado"
+                class="cajas"
+                placeholder="Escriba aquí el TEXTO que desea CIFRAR"
+              ></textarea>
+
+              <button id="cifrar">Cifrar</button>
+
+              <p id="respCifrada"></p>
+            </div>
+          </div>
+          <div class="envios">
+            <button id="mail">Enviar al Mail</button>
+
+            <button id="whatsapp">Enviar al whatsapp</button>
+          </div>
+        </div>
+      </div>
+      <div id="cerrarSesion" class="ventanas">
+        <h2>Usted a cerrado su sesión</h2>
+        <h3>Gracias por su preferencia</h3>
+      </div>
     </div>
     <script src="cipher.js"></script>
     <script src="index.js"></script>
