Eliminacion de flujo en la carpeta, modificacion de ejemplo, borrado de boton de instrucciones en html,css y js

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta name="viewport" />
     <meta charset="utf-8" />
-    <title>Caesar Cipher</title>
+    <title>Cipher</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -41,7 +41,6 @@
       </div>
 
       <div id="cuenta" class="ventanas">
-        <button id="uso">Modo de Uso</button>
         <button id="btnOutside">Salir</button>
         <div>
           <h2>Generar contraseñas:</h2>
@@ -65,9 +64,15 @@
             </p>
             <input type="number" id="codSeg" placeholder="001" />
           </div>
-          <p id="insMsj"><strong> Escribe</strong> en el recuadro debajo de Mensaje Descubierto <strong> para que es, la contraseña</strong>  que generaste y <strong> presiona</strong>  el botón <strong> cifrar </strong> . De modo que puedas pasarlo al papel y solo tu puedas recuperar el significado de la frase, escribiéndola debajo de Mensaje Cubierto y presionando Descifrar. </p>
+          <p id="insMsj">
+            <strong> Escribe</strong> en el recuadro debajo de Mensaje
+            Descubierto <strong> para que es, la contraseña</strong> que
+            generaste y <strong> presiona</strong> el botón
+            <strong> cifrar </strong> . De modo que puedas pasarlo al papel y
+            solo tu puedas recuperar el significado de la frase, escribiéndola
+            debajo de Mensaje Cubierto y presionando Descifrar.
+          </p>
           <div class="msj">
-            
             <div id="Cubierto">
               <p>Mensaje Cubierto</p>
 
